--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style type="text/css">
-  #meme_text {
-    background-color: transparent;
-    font-size: 40px;
-    font-family: "Impact";
-    color: white;
-    text-shadow: black 0px 0px 10px;
-    width: 600px;
-    position: absolute;
-    left: 15px;
-    top: 400px;
-}
-
-  </style>
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+  <script type="text/javascript" src="./script.js"></script>
 <h2>MEMES Generator</h2>
 <form>
   Meme text: <input type="text" id="user_text" maxlength="70" oninput="update_text()"><p>
@@ -24,19 +12,5 @@
   </form>
   <div id="meme_text">Exemple Text</div>
   <div id="meme_picture"><img src="" height="500" width="600"></div>
-
-  <script type="text/javascript">
-  function update_text(){
-    var user_text = document.getElementById("user_text");
-    var meme_text = document.getElementById("meme_text");
-    meme_text.innerHTML = user_text.value;
-}
-
-  function update_image(){
-    var img = document.querySelector('img');
-    var file = document.querySelector('input[type=file]').files[0];
-    img.src =  window.URL.createObjectURL(file);
-  }
-  </script>
 </body>
 </html>
